SessionFragment.kt now shows a new card for each added SessionExercise, displaying rudimentary info about the SessionExercise.

--- a/app/src/main/res/layout/fragment_session_info.xml
+++ b/app/src/main/res/layout/fragment_session_info.xml
@@ -24,7 +24,17 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:text="SESSION INFO"
+            android:text="SESSION INFO" />
+
+        <TextView
+            android:id="@+id/info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textView2"
             app:sessionInfo="@{sessionViewModel.session}" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
