--- a/app/src/main/res/layout/fragment_session_improved.xml
+++ b/app/src/main/res/layout/fragment_session_improved.xml
@@ -64,7 +64,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/exercisesList"
                 android:layout_width="match_parent"
-                android:layout_height="0dp" />
+                android:layout_height="match_parent" />
 
 
         </FrameLayout>
