--- a/app/src/main/res/layout/session_exercise_item.xml
+++ b/app/src/main/res/layout/session_exercise_item.xml
@@ -19,14 +19,14 @@
 
         <variable
             name="clickListener"
-            type="com.example.android.october2021.sessionexercises.SessionExerciseListener" />
+            type="com.example.android.october2021.sessionexercises.SessionExerciseWithExerciseListener" />
     </data>
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:onClick="@{() -> clickListener.onClick(sessionExercise)}"
+        android:onClick="@{() -> clickListener.onClick(sessionExerciseWithExercise)}"
         app:cardCornerRadius="2dp"
         app:cardElevation="8dp"
         app:cardPreventCornerOverlap="true"
@@ -43,7 +43,7 @@
                 tools:text="test 1"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:sessionExerciseTest="@{sessionExercise}" />
+                app:sessionExerciseTest="@{sessionExerciseWithExercise}" />
 
             <TextView
                 android:id="@+id/tv2"
@@ -51,7 +51,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@id/tv1"
-                app:sessionExerciseInfo="@{sessionExercise}"
+                app:sessionExerciseInfo="@{sessionExerciseWithExercise}"
                 tools:text="test 2" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
