--- a/app/src/main/res/layout/session_item.xml
+++ b/app/src/main/res/layout/session_item.xml
@@ -22,11 +22,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        app:contentPadding="8dp"
-        app:cardCornerRadius="2dp"
-        app:cardElevation="8dp"
-        app:cardPreventCornerOverlap="true"
+        style="@style/CustomCardView"
         android:onClick="@{() -> clickListener.onClick(session)}">
 
         <androidx.constraintlayout.widget.ConstraintLayout
