--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,4 +9,12 @@
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">24dp</item>
     </style>
+
+    <style name="CustomCardView" parent="CardView">
+        <item name="android:layout_margin">8dp</item>
+        <item name="contentPadding">8dp</item>
+        <item name="cardCornerRadius">2dp</item>
+        <item name="cardElevation">8dp</item>
+        <item name="cardPreventCornerOverlap">true</item>
+    </style>
 </resources>
